# painter-cli

./: .env.example  .gitignore  README.md  SKILL.md  USAGE.md  check_jumps.py  gif_service.py  guide.md  image_to_trace.py  image_to_trajectory.py  image_to_trajectory_old.py  image_to_trajectory_v2.py  inspect_strokes.py  pyproject.toml  trajectory_gif.py
.import_bundle/image-to-trajectory/: SKILL.md
.import_bundle/image-to-trajectory/scripts/: trajectory_prepare.py
.import_bundle/sugar-painting-flow/: SKILL.md
.import_bundle/sugar-painting-gen/: SKILL.md
.import_bundle/sugar-painting-gen/references/: dayinla-api.md
docs/superpowers/plans/: 2026-06-23-json-modbus-servo-painter.md  2026-06-25-model-trace-trajectory.md  2026-06-25-sugar-painting-flow.md  2026-06-26-trace-microservice.md
docs/superpowers/specs/: 2026-06-25-model-trace-trajectory-design.md  2026-06-25-sugar-painting-flow-design.md  2026-06-26-trace-microservice-design.md
painter_cli/: __init__.py  cli.py  config.py
painter_cli/drawing/: __init__.py  executor.py  interpolator.py  models.py  parser.py
painter_cli/modbus/: __init__.py  client.py  encoder.py
painter_cli/ui/: console.py
skills/image-to-trajectory/: SKILL.md
skills/sugar-painting-gen/: SKILL.md
skills/sugar-painting-gen/scripts/: sugar_painting_gen.py
tests/: conftest.py  test_encoder.py  test_executor.py  test_gif_service.py  test_image_to_trace.py  test_image_to_trajectory_wrapper.py  test_interpolator.py  test_parser.py  test_sugar_gen_lazy_imports.py  test_trajectory_prepare.py
